# regex-batch-renamer

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.mts  vite.config.tauri.mts
.github/workflows/: beta-release.yml  beta-validation.yml  release.yml
dist-electron/: main.cjs  preload.cjs
docs/: electron-retirement-plan.md
electron/: electron-env.d.ts  main.ts  preload.ts
release-notes/: v0.5.0.md  v0.5.1.md
scripts/: generate-updater-manifest.mjs  prepare-release-notes.mjs  prepare-tauri-release-config.mjs  run-tauri-build.mjs  run-tauri-release-build.mjs
src/: App.vue  desktop-globals.d.ts  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.vue  FileDropZone.vue  FilePreviewList.vue  HelpModal.vue  LanguageSwitcher.vue  OperationPipeline.vue  PresetManager.vue  SettingsModal.vue  ThemeSwitcher.vue  ToastNotification.vue
src/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
src/services/: preferences.ts  presetService.ts  renameEngine.ts  updateService.ts
src/stores/: fileStore.ts  operationStore.ts  settingsStore.ts  themeStore.ts  toastStore.ts
src/utils/: diff.ts  path.ts
updater/: stable.json
website/: index.html  package-lock.json  package.json
website/src/: App.vue  i18n.ts  style.css
(+37 files in other folders)
