[package]
name = "regex-batch-renamer-beta"
version = "0.5.1"
description = "Tauri beta shell for Regex Batch Renamer"
authors = ["junyou"]
edition = "2021"

[lib]
name = "regex_batch_renamer_beta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tempfile = "3"
